--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
-        default: 'kernelsu'
+        default: 'kernelsu-uc'
       KERNEL_DEFCONFIG:
         description: 'Defconfig'
         required: true
