--- a/arch/arm64/configs/kali_defconfig
+++ b/arch/arm64/configs/kali_defconfig
@@ -805,11 +805,11 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_SYSVIPC=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_MESH=y
-CONFIG_ATH9K_HTC=y
+# CONFIG_ATH9K_HTC is not set
 CONFIG_WLAN_VENDOR_ATH=y
 CONFIG_CARL9170=y
-CONFIG_ATH6KL=y
-CONFIG_ATH6KL_USB=y
+# CONFIG_ATH6KL is not set
+# CONFIG_ATH6KL_USB is not set
 CONFIG_WLAN_VENDOR_MEDIATEK=y
 CONFIG_MT7601U=y
 CONFIG_WLAN_VENDOR_RALINK=y
