--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ on:
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
-        default: 'kernelsu'
+        default: 'test'
       KERNEL_DEFCONFIG:
         description: 'Defconfig'
         required: true
-        default: 'X00TD_defconfig'
+        default: 'kali_defconfig'
       KERNEL_FILE:
         description: 'Your kernel out image name'
         required: true
