--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,3 +151,15 @@ jobs:
         name: 4.4-KSU-${{ env.VERSION }}-${{ env.DEVICE }}-${{ env.BUILD_TIME }}
         path: kernel_workspace/AnyKernel3/*
 
+    - name: Upload to Release
+      uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
+      with:
+        files: |
+          kernel_workspace/AnyKernel3/4.4-KSU-${{ env.VERSION }}-${{ env.DEVICE }}-${{ env.BUILD_TIME }}.zip
+        name: 4.4-KSU-${{ env.VERSION }}-${{ env.DEVICE }}-${{ env.BUILD_TIME }}
+        tag_name: ${{ github.run_id }}
+        body: |
+          Manifest: ${{ inputs.MANIFEST_BRANCH }}
+          Target: ${{ inputs.BUILD_TARGET }}.img
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
